# llmtest24

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPLETE_USAGE_GUIDE.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  CRUSH.md  Dockerfile  LICENSE  Makefile  README.md  README_EVALUATION.md  TestLLM.py  TestLLM_quick.py  __init__.py  adaptive_prompts.py  analysis_data.json  analyze_massive_consensus.py  architecture_map.json  atlas_optimization_test_result.txt  best_capabilities_test_report.json  check_actions_status.py  check_cloud_connectivity.py  check_github_pages.py  check_models.py  check_pages_status.py  check_pages_status_web.py  check_repo_settings.py  check_service.py  check_workflows.py  cloud_connection_cache.py  complete_web_automation_test.py  complete_web_testing_system.py  comprehensive_analysis_report.md  comprehensive_test_report.md  config.py  configure_github_pages.py  configure_pages_api.py  configure_with_edge.py  (+111 more)
.clinerules/: mandatory_workflow.md  task_completion_quality_rules.md
cognitive_ecosystem/: README.md  __init__.py
config/: .env.example  cloud_connection_cache.json  config.py  model_list.txt  models.txt  requirements.txt  roles.yaml  test_config.yaml  zero_response_diagnosis.json
core/: __init__.py  config_manager.py  framework.py  model_manager.py  model_manager_enhanced.py  test_orchestrator.py
docs/: API_REFERENCE.md  BREAKING_ANALYSIS.md  COGNITIVE_ECOSYSTEM_GUIDE.md  COGNITIVE_ECOSYSTEM_TEST_REPORT.md  DEVELOPER_GUIDE_EN.md  DEVELOPER_GUIDE_ZH.md  PROJECT_ARCHITECTURE_EN.md  PROJECT_ARCHITECTURE_ZH.md  PROJECT_OVERVIEW.md  QUICKSTART.md  SCORING_EXPLANATION.md  USER_GUIDE_EN.md  USER_GUIDE_ZH.md  Untitled-6.txt  characterbench.html  index.html  taskstodo0722.md  user_guide.md  测评2-3.html
examples/: advanced_usage.py  basic_usage.py  example_usage.py
independence/: README.md  STATUS.md  __init__.py  base.py  character_breaking.py  config.py  final_validation.py  implicit_cognition.py  longitudinal_consistency.py  test_integration.py  utils.py
memory/: __init__.py  context_tracker.py  memory_manager.py
nlp/: __init__.py  response_evaluator.py  text_analyzer.py
results/: __init__.py  data_exporter.py  report_generator.py
role_memories/: detective_memory.json  doctor_memory.json  teacher_memory.json
role_prompts/: detective_prompt.txt  doctor_prompt.txt  software_engineer_prompt.txt  teacher_prompt.txt
roles/: Academy of Management Journal Senior Editor.json  Academy of Management Review Senior Editor.json  Alfred_North_Whitehead.json  American Anthropologist Senior Editor.json  Biometrika Senior Editor.json  Human-AIcollaboration.json  Immanuel Wallerstein's World-Systems Analyst.json  Journal of American Statistical Association Senior Editor.json  N_Katherine_Hayles.json  Niklas_Luhmann.json  Norbert Elias's Figurational Sociologist.json  Organizational Demography.json  Prof. David Lee's Institutional Theorist.json  Prof. Maria Gonzalez's Critical Theorist.json  Richard_Dawkins.json  SNA-Expert.json  The AI-Driven Business Process Transformation.json  Theda Skocpol's Comparative Historical Analyst.json  平台政治经济学家.json  技术经济分析师.json
scripts/: __init__.py  main_orchestrator.py  run_selected_tests.py  run_web_tests.py
testLLM2/: config.py  enhanced_test_framework.py  fix_encoding_issues.py  safe_test_runner.py
test_reports/: FINAL_COMPLETION_REPORT.txt  complete_web_test_20250804_145213.json  demo_comprehensive_report_20250804_162819.json  final_test_summary.json  local_test_report.json  orchestrator_summary_20250724_112050.json  web_availability_report.txt  web_interface_test_report.json  web_interface_test_summary.md  web_test_report_20250804_145213.json  web_test_report_20250804_163733.json  web_test_summary.txt
testout/: collaboration_case1.txt  collaboration_case2.txt  collaboration_case3.txt  creativity_case1.txt  creativity_case2.txt  creativity_case3.txt  dag_case1.txt  dag_case1.txt.backup  dag_case2.txt  emergence_case1.txt  emergence_case2.txt  init_case1.txt  init_case2.txt  math_case1.txt  math_case2.txt  persona_case1_round1.txt  persona_case2_round2.txt  persona_case3_round3.txt  persona_depth_case1.txt  (+5 more)
(+377 files in other folders)
